<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_weight="30"
        android:orientation="vertical"
        android:background="@drawable/ukraine">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/beginner_question"
            android:textSize="28sp"
            android:textColor="#ffffff"
            android:id="@+id/textBeginnerQuestion"
            android:background="#83000000"
            android:layout_marginTop="50sp"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_weight="70"
        android:orientation="vertical"
        android:background="#338a30">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/beginner_button_1"
            android:id="@+id/buttonBeginner_1"
            android:background="#2183c9"
            android:textSize="26sp"
            android:padding="14dp"
            android:layout_marginTop="20sp"
            android:layout_gravity="center_horizontal"
            android:onClick="KievOn" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/beginner_button_2"
            android:id="@+id/buttonBeginner_2"
            android:background="#2183c9"
            android:textSize="26sp"
            android:padding="14dp"
            android:layout_below="@+id/buttonBeginner_1"
            android:layout_marginTop="40sp"
            android:layout_gravity="center_horizontal"
            android:onClick="LvivOn" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/beginner_button_3"
            android:id="@+id/buttonBeginner_3"
            android:background="#2183c9"
            android:textSize="26sp"
            android:padding="14dp"
            android:layout_below="@+id/buttonBeginner_2"
            android:layout_marginTop="40sp"
            android:layout_gravity="center_horizontal"
            android:onClick="KharkivOn" />
    </LinearLayout>
</LinearLayout>