<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/montain"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/textMainGreeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#83000000"
        android:padding="10dp"
        android:text="@string/greeting"
        android:textColor="#ffffff"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textMainQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="false"
        android:layout_below="@+id/textMainGreeting"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20sp"
        android:background="#83000000"
        android:text="@string/main_question"
        android:textColor="#ffffff"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textMainContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textMainQuestion"
        android:layout_marginTop="20sp"
        android:background="#83000000"
        android:text="@string/main_content"
        android:textColor="#ffffff"
        android:textSize="26sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/buttonBeginner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textMainContent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="50sp"
        android:background="#338a30"
        android:onClick="startGame"
        android:padding="14dp"
        android:text="LOW"
        android:textSize="26sp" />

    <Button
        android:id="@+id/buttonExpert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonBeginner"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="20sp"
        android:background="#5d8a30"
        android:onClick="startGame"
        android:padding="14dp"
        android:text="MEDIUM"
        android:textSize="26sp" />

    <Button
        android:id="@+id/buttonKing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonExpert"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="20sp"
        android:background="#8a6730"
        android:onClick="startGame"
        android:padding="14dp"
        android:text="HARD"
        android:textSize="26sp" />


</RelativeLayout>